unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Assignment_Number__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_Number__c</fullName>
    <description>The number of the assignment referenced in the version.</description>
    <inlineHelpText>The number of the assignment referenced in the version.</inlineHelpText>
    <label>Assignment Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>