unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Cost_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Cost_Rate_Amount__c</fullName>
    <description>The cost rate amount on the assignment referenced in the version.</description>
    <inlineHelpText>The cost rate amount on the assignment referenced in the version.</inlineHelpText>
    <label>Cost Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>