unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Cost_Rate_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>pse__Cost_Rate_Currency_Code__c</fullName>
    <description>The cost rate currency code on the assignment referenced in the version.</description>
    <inlineHelpText>The cost rate currency code on the assignment referenced in the version.</inlineHelpText>
    <label>Cost Rate Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>