unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Location__c.field-meta.xml
<CustomField>
    <fullName>pse__Location__c</fullName>
    <description>The location associated with the assignment referenced in the version.</description>
    <inlineHelpText>The location associated with the assignment referenced in the version.</inlineHelpText>
    <label>Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>