unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__MilestoneId__c.field-meta.xml
<CustomField>
    <fullName>pse__MilestoneId__c</fullName>
    <description>The ID of the milestone associated with the assignment referenced in the version.</description>
    <inlineHelpText>The ID of the milestone associated with the assignment referenced in the version.</inlineHelpText>
    <label>Milestone Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>