unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__MilestoneName__c.field-meta.xml
<CustomField>
    <fullName>pse__MilestoneName__c</fullName>
    <description>The name of the milestone associated with the assignment referenced in the version.</description>
    <inlineHelpText>The name of the milestone associated with the assignment referenced in the version.</inlineHelpText>
    <label>Milestone Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>