unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__OriginalLastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>pse__OriginalLastModifiedById__c</fullName>
    <description>The original last modified by ID for the assignment referenced in the version.</description>
    <inlineHelpText>The original last modified by ID for the assignment referenced in the version.</inlineHelpText>
    <label>Original Last Modified By Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>