unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Percentage_Allocated__c.field-meta.xml
<CustomField>
    <fullName>pse__Percentage_Allocated__c</fullName>
    <description>The percentage allocated in the assignment referenced in the version.</description>
    <inlineHelpText>The percentage allocated in the assignment referenced in the version.</inlineHelpText>
    <label>Percentage Allocated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>