unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Project_Task_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Task_Hours__c</fullName>
    <description>The project task hours for the assignment referenced in the version.</description>
    <inlineHelpText>The project task hours for the assignment referenced in the version.</inlineHelpText>
    <label>Project Task Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>