unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Rate_CardId__c.field-meta.xml
<CustomField>
    <fullName>pse__Rate_CardId__c</fullName>
    <description>The ID of the rate card associated with the assignment referenced in the version.</description>
    <inlineHelpText>The ID of the rate card associated with the assignment referenced in the version.</inlineHelpText>
    <label>Rate Card Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>