unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Rate_CardName__c.field-meta.xml
<CustomField>
    <fullName>pse__Rate_CardName__c</fullName>
    <description>The name of the rate card associated with the assignment referenced in the version.</description>
    <inlineHelpText>The name of the rate card associated with the assignment referenced in the version.</inlineHelpText>
    <label>Rate Card Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>