unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Resource_RequestId__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_RequestId__c</fullName>
    <description>The ID of the resource request associated with the assignment referenced in the version.</description>
    <inlineHelpText>The ID of the resource request associated with the assignment referenced in the version.</inlineHelpText>
    <label>Resource Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>