unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__ResourceId__c.field-meta.xml
<CustomField>
    <fullName>pse__ResourceId__c</fullName>
    <description>The resource ID on the assignment referenced in the version.</description>
    <inlineHelpText>The resource ID on the assignment referenced in the version.</inlineHelpText>
    <label>Resource Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>