unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Role__c</fullName>
    <description>The role associated with the assignment referenced in the version.</description>
    <inlineHelpText>The role associated with the assignment referenced in the version.</inlineHelpText>
    <label>Role</label>
    <length>200</length>
    <type>Text</type>
</CustomField>