unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Hours__c</fullName>
    <description>The scheduled hours on the assignment referenced in the version.</description>
    <inlineHelpText>The scheduled hours on the assignment referenced in the version.</inlineHelpText>
    <label>Scheduled Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>