unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__ScheduleId__c.field-meta.xml
<CustomField>
    <fullName>pse__ScheduleId__c</fullName>
    <description>The ID of the schedule associated with the assignment referenced in the version.</description>
    <inlineHelpText>The ID of the schedule associated with the assignment referenced in the version.</inlineHelpText>
    <label>Schedule Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>