unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__ScheduleName__c.field-meta.xml
<CustomField>
    <fullName>pse__ScheduleName__c</fullName>
    <description>The name of the schedule associated with the assignment referenced in the version.</description>
    <inlineHelpText>The name of the schedule associated with the assignment referenced in the version.</inlineHelpText>
    <label>Schedule Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>