unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <description>The status on the assignment referenced in the version.</description>
    <inlineHelpText>The status on the assignment referenced in the version.</inlineHelpText>
    <label>Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>