unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Time_Excluded__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The time excluded on the assignment referenced in the version.</description>
    <inlineHelpText>The time excluded on the assignment referenced in the version.</inlineHelpText>
    <label>Time Excluded</label>
    <type>Checkbox</type>
</CustomField>