unpackaged/main/default/objects/pse__VersionItem_Assignment__c/fields/pse__Version__c.field-meta.xml
<CustomField>
    <fullName>pse__Version__c</fullName>
    <description>A lookup to the version.</description>
    <inlineHelpText>A lookup to the version.</inlineHelpText>
    <label>Version</label>
    <referenceTo>pse__Version__c</referenceTo>
    <relationshipLabel>Version Item Assignments</relationshipLabel>
    <relationshipName>VersionItem_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>